ingress/controllers/haproxy/examples/tls/ssl-scenarios.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: game-ingress-ssl
spec:
  tls:
  - hosts:
    - b.stackpoint.io
    secretName: b.stackpoint.io
  rules:
  - host: b.stackpoint.io
    http:
      paths:
      - path:
        backend:
          serviceName: game2048
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress-ssl
spec:
  tls:
  - hosts:
    - b.b.stackpoint.io
    secretName: b.b.stackpoint.io
  rules:
  - host: b.b.stackpoint.io
    http:
      paths:
      - path:
        backend:
          serviceName: echoheaders
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-https
spec:
  tls:
  - hosts:
    - default.stackpoint.io
    secretName: default.stackpoint.io
  backend:
    serviceName: default-http-backend
    servicePort: 80
